DTGB-850: Fix wrong font as logged in user

--- a/source/sass/11-base/toolbar/_toolbar.scss
+++ b/source/sass/11-base/toolbar/_toolbar.scss
@@ -16,3 +16,14 @@ body {
     font-family: inherit;
   }
 }
+
+// Fix fonts on logged in pages.
+body[class*='icon-'] {
+  font-family: inherit;
+  font-style: inherit;
+  font-variant: inherit;
+  font-weight: inherit;
+  text-decoration: inherit;
+  text-transform: inherit;
+  speak: inherit;
+}
